--- a/notebooks/2_train_model.ipynb
+++ b/notebooks/2_train_model.ipynb
@@ -18,8 +18,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CUDA disponible: False\n",
-      "No se detectó ninguna GPU con CUDA.\n"
+      "CUDA disponible: True\n",
+      "Versión de CUDA: 12.6\n",
+      "Número de GPUs: 1\n",
+      "Nombre de la GPU: NVIDIA GeForce RTX 4090\n"
      ]
     }
    ],
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a52add27",
    "metadata": {},
    "outputs": [],
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "f6f6d8e6",
    "metadata": {},
    "outputs": [],
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b47bab89",
    "metadata": {},
    "outputs": [
@@ -79,7 +81,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\josei\\OneDrive\\Documentos\\AnyoneAI\\object-detection-yolo\\notebooks\\../src\\utils.py:14: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "c:\\Users\\USER\\Documents\\personal_projects\\object-detection-yolo\\notebooks\\../src\\utils.py:14: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df[\"class\"] = df[\"class\"].replace(\"object\", 0)\n"
      ]
     },
@@ -94,7 +96,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\josei\\OneDrive\\Documentos\\AnyoneAI\\object-detection-yolo\\notebooks\\../src\\utils.py:14: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "c:\\Users\\USER\\Documents\\personal_projects\\object-detection-yolo\\notebooks\\../src\\utils.py:14: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df[\"class\"] = df[\"class\"].replace(\"object\", 0)\n"
      ]
     },
@@ -109,7 +111,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\josei\\OneDrive\\Documentos\\AnyoneAI\\object-detection-yolo\\notebooks\\../src\\utils.py:14: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "c:\\Users\\USER\\Documents\\personal_projects\\object-detection-yolo\\notebooks\\../src\\utils.py:14: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df[\"class\"] = df[\"class\"].replace(\"object\", 0)\n"
      ]
     },
@@ -129,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "2d1c8323",
    "metadata": {},
    "outputs": [
@@ -149,7 +151,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "object-detection-yolo",
    "language": "python",
    "name": "python3"
   },
@@ -163,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
