--- a/notebooks/2_Prepare_data.ipynb
+++ b/notebooks/2_Prepare_data.ipynb
@@ -30,7 +30,8 @@
     "sys.path.append('../src')\n",
     "\n",
     "from utils import convert_to_yolo_format\n",
-    "from utils import order_images"
+    "from utils import order_images\n",
+    "from utils import add_new_labels"
    ]
   },
   {
@@ -77,7 +78,7 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\USER\\Documents\\personal_projects\\object-detection-yolo\\notebooks\\../src\\utils.py:14: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df[\"class\"] = df[\"class\"].replace(\"object\", 0)\n"
+      "  df[\"class\"] = df[\"class\"].replace(\"object\", 1)\n"
      ]
     },
     {
@@ -92,7 +93,7 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\USER\\Documents\\personal_projects\\object-detection-yolo\\notebooks\\../src\\utils.py:14: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df[\"class\"] = df[\"class\"].replace(\"object\", 0)\n"
+      "  df[\"class\"] = df[\"class\"].replace(\"object\", 1)\n"
      ]
     },
     {
@@ -107,7 +108,7 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\USER\\Documents\\personal_projects\\object-detection-yolo\\notebooks\\../src\\utils.py:14: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
-      "  df[\"class\"] = df[\"class\"].replace(\"object\", 0)\n"
+      "  df[\"class\"] = df[\"class\"].replace(\"object\", 1)\n"
      ]
     },
     {
@@ -149,6 +150,32 @@
    "source": [
     "\n",
     "order_images(\"../data/SKU110K_dataset/images/\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7b2b266",
+   "metadata": {},
+   "source": [
+    "## Add new labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "621d9ac4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New labels added successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "add_new_labels(\"../data/SKU110K_dataset/new_labels/\", \"../data/SKU110K_dataset/labels\")"
    ]
   }
  ],
