--- a/notebooks/2_Prepare_data.ipynb
+++ b/notebooks/2_Prepare_data.ipynb
@@ -1031,6 +1031,74 @@
     "    output_dir=\"../data/SKU110K_dataset/split_labels\"\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2081e61f",
+   "metadata": {},
+   "source": [
+    "## move images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d1435326",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Imágenes separadas correctamente en split_images.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "def split_images_by_labels(labels_dir: str, images_dir: str, output_dir: str):\n",
+    "    \"\"\"\n",
+    "    Crea carpetas split_images/train, split_images/test y split_images/val\n",
+    "    copiando las imágenes .jpg que correspondan a los .txt en split_labels.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    subsets = [\"train\", \"test\", \"val\"]\n",
+    "\n",
+    "    for subset in subsets:\n",
+    "        label_subset_path = os.path.join(labels_dir, subset)\n",
+    "        image_subset_path = os.path.join(output_dir, subset)\n",
+    "        os.makedirs(image_subset_path, exist_ok=True)\n",
+    "\n",
+    "        # Recorre los archivos .txt en cada subcarpeta de labels\n",
+    "        for label_file in os.listdir(label_subset_path):\n",
+    "            if label_file.endswith(\".txt\"):\n",
+    "                # Reemplaza .txt por .jpg\n",
+    "                image_name = os.path.splitext(label_file)[0] + \".jpg\"\n",
+    "                src_image = os.path.join(images_dir, image_name)\n",
+    "                dst_image = os.path.join(image_subset_path, image_name)\n",
+    "\n",
+    "                # Si la imagen existe, la copia\n",
+    "                if os.path.exists(src_image):\n",
+    "                    shutil.copy(src_image, dst_image)\n",
+    "                else:\n",
+    "                    print(f\"⚠️ Imagen no encontrada: {image_name}\")\n",
+    "\n",
+    "    print(\"✅ Imágenes separadas correctamente en split_images.\")\n",
+    "\n",
+    "# === Ejemplo de uso ===\n",
+    "# split_images_by_labels(\n",
+    "#     labels_dir=r\"data\\SKU110K_dataset\\split_labels\",\n",
+    "#     images_dir=r\"data\\SKU110K_dataset\\images\",\n",
+    "#     output_dir=r\"data\\SKU110K_dataset\\split_images\"\n",
+    "# )\n",
+    "split_images_by_labels(\n",
+    "    labels_dir=\"../data/SKU110K_dataset/split_labels\",\n",
+    "    images_dir=\"../data/SKU110K_dataset/images\",\n",
+    "    output_dir=\"../data/SKU110K_dataset/split_images\"\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
@@ -1049,7 +1117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
