--- a/notebooks/1_EDA.ipynb
+++ b/notebooks/1_EDA.ipynb
@@ -380,7 +380,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "object-detection-yolo",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
